GearsetPOC/force-app/main/default/objects/Codes__c/Codes__c.object-meta.xml
<CustomObject>
    <label>Codes</label>
    <nameField>
        <label>Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Codes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>