GearsetPOC/force-app/main/default/objects/Codes__c/fields/Account_Branch__c.field-meta.xml
<CustomField>
    <fullName>Account_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the B2B Branch Account for the Code</description>
    <label>Branch</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Business_Account__c.Hierarchy_Level__c</field>
            <operation>equals</operation>
            <value>Branch Account</value>
        </filterItems>
        <filterItems>
            <field>Business_Account__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agency Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Business_Account__c</referenceTo>
    <relationshipLabel>Codes (Branch)</relationshipLabel>
    <relationshipName>Codes_Branch</relationshipName>
    <type>Lookup</type>
</CustomField>