GearsetPOC/force-app/main/default/objects/Codes__c/fields/Account_is_Credit_Worthy__c.field-meta.xml
<CustomField>
    <fullName>Account_is_Credit_Worthy__c</fullName>
    <formula>ISPICKVAL(Account__r.Account_Status__c,&quot;Active&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account is Credit Worthy</label>
    <type>Checkbox</type>
</CustomField>