GearsetPOC/force-app/main/default/objects/Codes__c/fields/Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_2__c</fullName>
    <formula>IF(NOT(ISBLANK( Branch__c )),  Branch__r.Address_Line_2__c,
IF(NOT(ISBLANK( Trade_Contracts_Account__c)),  Trade_Contracts_Account__r.Address_Line_2_Reg__c ,  Commercial_Entity__r.Address_Line_2__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Line 2</label>
    <type>Text</type>
</CustomField>