GearsetPOC/force-app/main/default/objects/Codes__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <referenceTo>Account_Branches__c</referenceTo>
    <relationshipLabel>Codes</relationshipLabel>
    <relationshipName>Codes</relationshipName>
    <type>Lookup</type>
</CustomField>