GearsetPOC/force-app/main/default/objects/Codes__c/fields/Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Code__c</fullName>
    <formula>Account_Branch__r.Branch_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Code</label>
    <type>Text</type>
</CustomField>