GearsetPOC/force-app/main/default/objects/Codes__c/fields/Branch_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Branch_Email_Address__c</fullName>
    <formula>Account_Branch__r.Notices_Email__c</formula>
    <label>Branch Email Address</label>
    <type>Text</type>
</CustomField>