GearsetPOC/force-app/main/default/objects/Codes__c/fields/Code_Location__c.field-meta.xml
<CustomField>
    <fullName>Code_Location__c</fullName>
    <label>Code Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>