GearsetPOC/force-app/main/default/objects/Codes__c/fields/CodeValidation__c.field-meta.xml
<CustomField>
    <fullName>CodeValidation__c</fullName>
    <label>CodeValidation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>