GearsetPOC/force-app/main/default/objects/Codes__c/fields/Commercial_Entity__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial Entity</label>
    <referenceTo>Trade_Sales_Account__c</referenceTo>
    <relationshipLabel>Codes</relationshipLabel>
    <relationshipName>Codes</relationshipName>
    <type>Lookup</type>
</CustomField>