GearsetPOC/force-app/main/default/objects/Codes__c/fields/Concessions_Approved__c.field-meta.xml
<CustomField>
    <fullName>Concessions_Approved__c</fullName>
    <formula>Account__r.Concession__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Concessions Approved</label>
    <type>Checkbox</type>
</CustomField>