GearsetPOC/force-app/main/default/objects/Codes__c/fields/County_State__c.field-meta.xml
<CustomField>
    <fullName>County_State__c</fullName>
    <formula>IF(NOT(ISBLANK( Account_Branch__c)), Account_Branch__r.BillingState__c, Account__r.BillingState__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>County / State</label>
    <type>Text</type>
</CustomField>