GearsetPOC/force-app/main/default/objects/Codes__c/fields/IATA__c.field-meta.xml
<CustomField>
    <fullName>IATA__c</fullName>
    <label>IATA</label>
    <length>30</length>
    <type>Text</type>
</CustomField>