GearsetPOC/force-app/main/default/objects/Codes__c/fields/Oracle_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_ID__c</fullName>
    <label>Oracle ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>