GearsetPOC/force-app/main/default/objects/Codes__c/fields/Post_Code_Zip__c.field-meta.xml
<CustomField>
    <fullName>Post_Code_Zip__c</fullName>
    <formula>IF(NOT(ISBLANK( Account_Branch__c)), Account_Branch__r.BillingPostalCode__c, Account__r.BillingPostalCode__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Post Code / Zip</label>
    <type>Text</type>
</CustomField>