GearsetPOC/force-app/main/default/objects/Codes__c/fields/Trade_Contracts_Account__c.field-meta.xml
<CustomField>
    <fullName>Trade_Contracts_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trade Contracts Account</label>
    <referenceTo>Trade_Contracts_Company__c</referenceTo>
    <relationshipLabel>Codes</relationshipLabel>
    <relationshipName>Codes</relationshipName>
    <type>Lookup</type>
</CustomField>