GearsetPOC/force-app/main/default/objects/Codes__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BAF</fullName>
            </value>
            <value>
                <fullName>IATA Nbr</fullName>
            </value>
            <value>
                <fullName>Oracle Code</fullName>
            </value>
            <value>
                <fullName>Voyager Office</fullName>
            </value>
            <value>
                <fullName>API Office Code</fullName>
            </value>
            <value>
                <fullName>UNI code</fullName>
            </value>
            <value>
                <fullName>Account Number</fullName>
                <isActive>false</isActive>
                <label>Account Number</label>
            </value>
            <value>
                <fullName>EMIS Name</fullName>
                <isActive>false</isActive>
                <label>EMIS Name</label>
            </value>
            <value>
                <fullName>MIC</fullName>
                <isActive>false</isActive>
                <label>MIC</label>
            </value>
            <value>
                <fullName>Old TO Acct Nbr</fullName>
                <isActive>false</isActive>
                <label>Old TO Acct Nbr</label>
            </value>
            <value>
                <fullName>PCC / Office ID</fullName>
                <isActive>false</isActive>
                <label>PCC / Office ID</label>
            </value>
            <value>
                <fullName>TJR</fullName>
                <isActive>false</isActive>
                <label>TJR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>