GearsetPOC/force-app/main/default/objects/Codes__c/listViews/Commercial_Codes.listView-meta.xml
<ListView>
    <fullName>Commercial_Codes</fullName>
    <columns>NAME</columns>
    <columns>Branch__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Commercial_Entity__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Commercial Codes</label>
    <language>en_US</language>
    <sharedTo>
        <group>EBSC_Commercial_Support</group>
    </sharedTo>
</ListView>