GearsetPOC/force-app/main/default/objects/Codes__c/listViews/Trade_Contract_Codes.listView-meta.xml
<ListView>
    <fullName>Trade_Contract_Codes</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Branch__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Trade_Contracts_Account__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Trade Contract Codes</label>
    <language>en_US</language>
    <sharedTo>
        <group>EBSC_Commercial_Support</group>
    </sharedTo>
</ListView>